# vpilot-alert

./: .gitignore  Cargo.toml  README.md
AlertPlugin/: .gitignore  AlertPlugin.csproj  AlertPlugin.sln  Plugin.cs  RossCarlson.Vatsim.Vpilot.Plugins.xml
src/: fcm.rs  main.rs  route.rs  state.rs
vPilotAlert/: App.tsx  FirebaseConfig.ts  app.json  eslint.config.mjs  index.js  package-lock.json  package.json  requestPermissions.ts  styles.ts
vPilotAlert/android/: build.gradle  settings.gradle
vPilotAlert/android/app/: build.gradle
vPilotAlert/android/app/src/main/: AndroidManifest.xml
vPilotAlert/android/app/src/main/java/com/vpilotalert/: AlarmSoundsModule.kt  AlarmSoundsPackage.kt  MainActivity.kt  MainApplication.kt
vPilotAlert/android/app/src/main/res/values/: strings.xml
vPilotAlert/contexts/: BaseURL.tsx
vPilotAlert/ios/: Podfile
vPilotAlert/ios/VpilotAlert/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
vPilotAlert/ios/VpilotAlert.xcodeproj/: project.pbxproj
vPilotAlert/ios/VpilotAlert.xcodeproj/xcshareddata/xcschemes/: VpilotAlert.xcscheme
vPilotAlert/ios/VpilotAlertTests/: VpilotAlertTests.m
vPilotAlert/screens/: AlarmSounds.tsx  LiveData.tsx  Notifications.tsx  Settings.tsx
