[package]
name = "vpilot-alert"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
geo = "0.30"
jsonwebtoken = "9.3"
md5 = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
flume = "0.11"
